it seems mingw is not installed by default on appveyor's "Visual Studio 2015" worker

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,6 +16,9 @@ environment:
       - GENERATOR: "Visual Studio 14 2015 Win64"
       - GENERATOR: "MinGW Makefiles"
 
+install:
+  - cinst mingw
+
 before_build:
   - git submodule update --init --recursive
 
