--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,10 @@ os: Visual Studio 2015
 platform: Any CPU
 clone_depth: 1
 
+matrix:
+    allow_failures:
+      - GENERATOR: "Visual Studio 12 2013 Win64"
+
 environment:
     matrix:
       - GENERATOR: "Visual Studio 12 2013 Win64"
