--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ matrix:
       - compiler: clang++
         env: CXX_VERSION=3.7
 
-      - env: BUILD_DOC=true
+      - env: CXX_VERSION=5 BUILD_DOC=true
 
     include:
       - compiler: g++
@@ -89,7 +89,7 @@ matrix:
 
 env:
     global:
-        secure: I+/0uZHtoQoyh/NzNru20y7YBqkazbXj/ciTRxoX5oq4YCZoFh07BJxghWeQNX/OqAVpKb0pNbkyMJxKe628LeHlI4ftZCZl2ZJmcLONR9KOUI+8eJ/sb5+TgQIaG1uBwUFx89eXKbbZWWdc0CQhBnSEJdU8sl6lY+ZsbU9PtKk=
+      - secure: "I+/0uZHtoQoyh/NzNru20y7YBqkazbXj/ciTRxoX5oq4YCZoFh07BJxghWeQNX/OqAVpKb0pNbkyMJxKe628LeHlI4ftZCZl2ZJmcLONR9KOUI+8eJ/sb5+TgQIaG1uBwUFx89eXKbbZWWdc0CQhBnSEJdU8sl6lY+ZsbU9PtKk="
 
 install:
   - DEPS_PATH="${TRAVIS_BUILD_DIR}/deps"
