--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,5 +7,5 @@ add_test_matrix(
     "${METAL_CXX_DIALECTS}"
     "${CMAKE_CURRENT_SOURCE_DIR}"
 )
-add_dependencies(metal.test metal)
-add_dependencies(metal.test metal.example)
+
+add_dependencies(metal metal.test)
