--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,7 +23,7 @@ before_build:
   - cmake -G"%GENERATOR%" "%APPVEYOR_BUILD_FOLDER%"
 
 build_script:
-  - cmake --build "%APPVEYOR_BUILD_FOLDER%\build" --target metal.test
+  - cmake --build "%APPVEYOR_BUILD_FOLDER%\build" --target metal
 
 test_script:
   - ctest --output-on-failure
