excluding documentation, examples and test targets from default build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,6 @@ option(METAL_INCREASE_VERBOSITY         "increase compiler verbosity"        ON)
 option(METAL_ENABLE_WARNINGS            "enable warnings"                    ON)
 option(METAL_ENABLE_EXTRA_WARNINGS      "enable extra warnings"             OFF)
 option(METAL_ENFORCE_STRICT_BEHAVIOR    "enforce strict behavior"           OFF)
-option(METAL_CONFIGURE_TESTS            "configure tests"                    ON)
 
 if(METAL_ENABLE_EXTRA_WARNINGS)
     set(METAL_ENABLE_WARNINGS ON)
@@ -167,9 +166,6 @@ file(GLOB_RECURSE METAL_HEADERS ${METAL_INCLUDE_DIR}/*.hpp)
 add_custom_target(metal SOURCES ${METAL_HEADERS})
 install(FILES ${METAL_HEADERS} DESTINATION include)
 
-add_subdirectory(doc)
-add_subdirectory(example)
-
-if(METAL_CONFIGURE_TESTS)
-    add_subdirectory(test)
-endif()
+add_subdirectory(doc        EXCLUDE_FROM_ALL)
+add_subdirectory(example    EXCLUDE_FROM_ALL)
+add_subdirectory(test       EXCLUDE_FROM_ALL)
