updating travis script to add other clang versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,12 @@ matrix:
             apt:
                 packages:
                   - g++-4.7
-                sources:
+                sources: &sources
                   - ubuntu-toolchain-r-test
+                  - llvm-toolchain-precise
+                  - llvm-toolchain-precise-3.5
+                  - llvm-toolchain-precise-3.6
+                  - llvm-toolchain-precise-3.7
 
       - compiler: g++
         env: CXX_VERSION=4.8
@@ -27,8 +31,7 @@ matrix:
             apt:
                 packages:
                   - g++-4.8
-                sources:
-                  - ubuntu-toolchain-r-test
+                sources: *sources
 
       - compiler: g++
         env: CXX_VERSION=4.9
@@ -36,17 +39,31 @@ matrix:
             apt:
                 packages:
                   - g++-4.9
-                sources:
-                  - ubuntu-toolchain-r-test
+                sources: *sources
 
       - compiler: g++
         env: CXX_VERSION=5
-        addons: &gcc5
+        addons:
             apt:
                 packages:
                   - g++-5
-                sources:
-                  - ubuntu-toolchain-r-test
+                sources: *sources
+
+      - compiler: clang++
+        env: CXX_VERSION=3.3
+        addons:
+            apt:
+                packages:
+                  - clang-3.3
+                sources: *sources
+
+      - compiler: clang++
+        env: CXX_VERSION=3.4
+        addons:
+            apt:
+                packages:
+                  - clang-3.4
+                sources: *sources
 
       - compiler: clang++
         env: CXX_VERSION=3.5
@@ -54,9 +71,7 @@ matrix:
             apt:
                 packages:
                   - clang-3.5
-                sources:
-                  - ubuntu-toolchain-r-test
-                  - llvm-toolchain-precise-3.5
+                sources: *sources
 
       - compiler: clang++
         env: CXX_VERSION=3.6
@@ -64,9 +79,7 @@ matrix:
             apt:
                 packages:
                   - clang-3.6
-                sources:
-                  - ubuntu-toolchain-r-test
-                  - llvm-toolchain-precise-3.6
+                sources: *sources
 
       - compiler: clang++
         env: CXX_VERSION=3.7
@@ -74,19 +87,24 @@ matrix:
             apt:
                 packages:
                   - clang-3.7
-                sources:
-                  - ubuntu-toolchain-r-test
-                  - llvm-toolchain-precise-3.7
+                sources: *sources
+
+      - compiler: clang++
+        env: CXX_VERSION=3.8
+        addons:
+            apt:
+                packages:
+                  - clang-3.8
+                sources: *sources
 
 env:
     global:
       - secure: "DuBGzmeKiWMm5m0+uZhutjzCffB2PbixmuMm3IZWUi7/uAam4PPI37oeqVTIytxxfpgRvfR2ah75eJyU6ab72MBoHxGkHem10RAvhC/vPYbLZu545qfSGatyTI9R6NfERUxi7YIxjs6D8c4D/5k3gMoCbMUkU1Lze1708lknh5U="
 
     matrix:
-      - CXX_VERSION=5 BUILD_DOC=true
+      - BUILD_DOC=true
 
 compiler: g++
-addons: *gcc5
 
 install:
   - DEPS_PATH="${TRAVIS_BUILD_DIR}/deps"
@@ -103,8 +121,8 @@ before_script:
   - mkdir "${TRAVIS_BUILD_DIR}/build"
   - cd "${TRAVIS_BUILD_DIR}/build"
 
-  - if [[ -z "${COMPILER}" ]]; then COMPILER=g++; fi
-  - cmake "${TRAVIS_BUILD_DIR}" -DCMAKE_CXX_COMPILER=$CXX-${CXX_VERSION}
+  - if [[ -n "${CXX_VERSION}" ]]; then CXX=${CXX}-${CXX_VERSION}; fi
+  - cmake "${TRAVIS_BUILD_DIR}" -DCMAKE_CXX_COMPILER=${CXX}
 
 script:
   - if [[ "${BUILD_DOC}" != "true" ]]; then time make metal && ctest --output-on-failure; fi
