--- a/.travis.yml
+++ b/.travis.yml
@@ -7,31 +7,19 @@ os: linux
 sudo: false
 
 matrix:
-    allow_failures:
-      - compiler: g++
-        env: CXX_VERSION=4.7
-
     include:
-      - compiler: g++
-        env: CXX_VERSION=4.7
-        addons:
-            apt:
-                packages:
-                  - g++-4.7
-                sources: &sources
-                  - ubuntu-toolchain-r-test
-                  - llvm-toolchain-precise
-                  - llvm-toolchain-precise-3.5
-                  - llvm-toolchain-precise-3.6
-                  - llvm-toolchain-precise-3.7
-
       - compiler: g++
         env: CXX_VERSION=4.8
         addons:
             apt:
                 packages:
                   - g++-4.8
-                sources: *sources
+                sources: &sources
+                  - ubuntu-toolchain-r-test
+                  - llvm-toolchain-precise
+                  - llvm-toolchain-precise-3.5
+                  - llvm-toolchain-precise-3.6
+                  - llvm-toolchain-precise-3.7
 
       - compiler: g++
         env: CXX_VERSION=4.9
@@ -122,7 +110,7 @@ before_script:
   - cd "${TRAVIS_BUILD_DIR}/build"
 
   - if [[ -n "${CXX_VERSION}" ]]; then CXX=${CXX}-${CXX_VERSION}; fi
-  - cmake "${TRAVIS_BUILD_DIR}" -DCMAKE_CXX_COMPILER=${CXX}
+  - cmake "${TRAVIS_BUILD_DIR}" -DCMAKE_CXX_COMPILER=/usr/bin/${CXX}
 
 script:
   - if [[ "${BUILD_DOC}" != "true" ]]; then time make metal && ctest --output-on-failure; fi
