--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,10 @@
 # Distributed under the Boost Software License, Version 1.0.
 # (See accompanying file LICENSE.txt or copy at http://boost.org/LICENSE_1_0.txt)
 
+if(CXX_COMPILER_IS_GNU OR CXX_COMPILER_IS_CLANG)
+    add_compile_flags_globally("-ftemplate-depth=512")
+endif()
+
 add_test_matrix(
     metal.test
     "${METAL_CXX_DIALECTS}"
