--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -770,8 +770,13 @@ WARN_LOGFILE           =
 # spaces.
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = @Metal_SOURCE_DIR@/include \
-                         @Metal_SOURCE_DIR@/doc/
+INPUT                  =    @Metal_SOURCE_DIR@/doc/introduction.md \
+                            @Metal_SOURCE_DIR@/doc/motivation.md \
+                            @Metal_SOURCE_DIR@/doc/overview.md \
+                            @Metal_SOURCE_DIR@/doc/concepts.md \
+                            @Metal_SOURCE_DIR@/doc/portability.md \
+                            @Metal_SOURCE_DIR@/include \
+
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
