--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -228,19 +228,24 @@ TAB_SIZE               = 4
 # "Side Effects:". You can put \n's in the value part of an alias to insert
 # newlines.
 
-ALIASES               +=value="\ref concept_value"
-ALIASES               +=values="\ref concept_value \"Values\""
-ALIASES               +=optional="\ref concept_optional"
-ALIASES               +=optionals="\ref concept_optional \"Optionals\""
-ALIASES               +=number="\ref concept_number"
-ALIASES               +=numbers="\ref concept_number \"Numbers\""
-ALIASES               +=expression="\ref concept_expression"
-ALIASES               +=expressions="\ref concept_expression \"Expressions\""
-ALIASES               +=lambda="\ref concept_lambda"
-ALIASES               +=lambdas="\ref concept_lambda \"Lambdas\""
+ALIASES +=value="\ref overview_concepts_value"
+ALIASES +=values="\ref overview_concepts_value \"Values\""
+ALIASES +=optional="\ref overview_concepts_optional"
+ALIASES +=optionals="\ref overview_concepts_optional \"Optionals\""
+ALIASES +=number="\ref overview_concepts_number"
+ALIASES +=numbers="\ref overview_concepts_number \"Numbers\""
+ALIASES +=expression="\ref overview_concepts_expression"
+ALIASES +=expressions="\ref overview_concepts_expression \"Expressions\""
+ALIASES +=lambda="\ref overview_concepts_lambda"
+ALIASES +=lambdas="\ref overview_concepts_lambda \"Lambdas\""
+ALIASES +=list="\ref overview_concepts_list"
+ALIASES +=lists="\ref overview_concepts_list \"Lists\""
+ALIASES +=pair="\ref overview_concepts_pair"
+ALIASES +=pairs="\ref overview_concepts_pair \"Pairs\""
+ALIASES +=map="\ref overview_concepts_map"
+ALIASES +=maps="\ref overview_concepts_map \"Maps\""
 
-ALIASES               +=nothing="\ref is_nothing \"nothing\""
-ALIASES               +=just="\ref is_just \"just\""
+ALIASES +=tip{1}="<dl class=\"section note\"><dt>Pro Tip</dt><dd>\1</dd></dl>"
 
 # This tag can be used to specify a number of word-keyword mappings (TCL only).
 # A mapping has the form "name=value". For example adding "class=itcl::class"
@@ -773,7 +778,6 @@ WARN_LOGFILE           =
 INPUT                  =    @Metal_SOURCE_DIR@/doc/introduction.md \
                             @Metal_SOURCE_DIR@/doc/motivation.md \
                             @Metal_SOURCE_DIR@/doc/overview.md \
-                            @Metal_SOURCE_DIR@/doc/concepts.md \
                             @Metal_SOURCE_DIR@/doc/portability.md \
                             @Metal_SOURCE_DIR@/include \
 
